--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Pratik Magar
 logo: /assets/img/round_image.png
 description: Software Engineer | TypeScript | C#
+show_downloads: true
 theme: jekyll-theme-minimal
