--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Pratik Magar
-logo: /assets/img/round_image.png
+logo: /assets/img/round_image_150.png
 description: Software Engineer | TypeScript | C#
 theme: jekyll-theme-minimal
