--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Pratik Magar
 logo: /assets/img/round_image_final.jpg
-description: Software Engineer | TypeScript | C#
+description: Backend | TypeScript | C#
 theme: jekyll-theme-minimal
