--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Pratik Magar
 logo: /assets/img/round_image_142.png
-description: Backend | TypeScript | Go
+description: Software Engineer
 theme: jekyll-theme-minimal
